--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Övningsuppgift</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/3447bf28b8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -16,11 +17,17 @@
     </header>
 
     <main id="content">
+
        
     </main>
 
     <footer>
         <p>© Jesper Andersson</p>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-x-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
+
     </footer>
 
     <script src="script.js"></script>
